Update logo to 'FRAN MUSIC CAVE' with neon glow effect

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">FRAN</div>
+            <div class="logo">FRAN MUSIC CAVE</div>
             <div class="header-subtitle">ARCHIVE</div>
         </nav>
     </header>
