--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <meta name="theme-color" content="#000000">
-    <title>Fran's Music Feed</title>
+    <title>Fran's Music Cave</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><circle cx='50' cy='50' r='45' fill='%23000'/><circle cx='50' cy='50' r='40' fill='%23111'/><circle cx='50' cy='50' r='30' fill='%23000'/><circle cx='50' cy='50' r='20' fill='%23222'/><circle cx='50' cy='50' r='8' fill='%23000'/></svg>">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
