Add spinning vinyl animation on successful track upload

--- a/index.html
+++ b/index.html
@@ -83,8 +83,18 @@
                 <button type="submit" class="submit-btn">SUBMIT</button>
             </form>
             <div class="upload-success" id="uploadSuccess">
-                <p>✓ Track submitted successfully!</p>
-                <p>It will be reviewed and added soon.</p>
+                <div class="vinyl-animation">
+                    <svg width="80" height="80" viewBox="0 0 100 100">
+                        <circle cx="50" cy="50" r="45" fill="#111" stroke="#333" stroke-width="1"/>
+                        <circle cx="50" cy="50" r="35" fill="#0a0a0a"/>
+                        <circle cx="50" cy="50" r="25" fill="#111"/>
+                        <circle cx="50" cy="50" r="15" fill="#0a0a0a"/>
+                        <circle cx="50" cy="50" r="6" fill="#222"/>
+                        <circle cx="50" cy="50" r="3" fill="#000"/>
+                    </svg>
+                </div>
+                <p>Track submitted successfully!</p>
+                <p>Now playing in the feed...</p>
             </div>
         </div>
     </section>
