--- a/index.html
+++ b/index.html
@@ -4,9 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <meta name="theme-color" content="#000000">
-    <title>Fran's Music Cave</title>
+
+    <!-- SEO Meta Tags -->
+    <title>Fran's Music Cave - Underground Techno & House Tracks</title>
+    <meta name="description" content="Discover and share underground techno, house and electronic music. A curated feed of the best tracks from Spotify, YouTube and SoundCloud. Join the community.">
+    <meta name="keywords" content="techno, house, underground music, electronic music, DJ sets, techno tracks, house music, music feed, spotify, soundcloud">
+    <meta name="author" content="Fran">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://narfbach.github.io/fran-music-cave/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://narfbach.github.io/fran-music-cave/">
+    <meta property="og:title" content="Fran's Music Cave - Underground Techno & House">
+    <meta property="og:description" content="Discover and share underground techno, house and electronic music. A curated feed of the best tracks.">
+    <meta property="og:site_name" content="Fran's Music Cave">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://narfbach.github.io/fran-music-cave/">
+    <meta property="twitter:title" content="Fran's Music Cave - Underground Techno & House">
+    <meta property="twitter:description" content="Discover and share underground techno, house and electronic music.">
+
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><circle cx='50' cy='50' r='45' fill='%23000'/><circle cx='50' cy='50' r='40' fill='%23111'/><circle cx='50' cy='50' r='30' fill='%23000'/><circle cx='50' cy='50' r='20' fill='%23222'/><circle cx='50' cy='50' r='8' fill='%23000'/></svg>">
     <link rel="stylesheet" href="styles.css">
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Fran's Music Cave",
+        "url": "https://narfbach.github.io/fran-music-cave/",
+        "description": "Discover and share underground techno, house and electronic music. A curated feed of the best tracks from Spotify, YouTube and SoundCloud.",
+        "potentialAction": {
+            "@type": "SearchAction",
+            "target": "https://narfbach.github.io/fran-music-cave/?q={search_term_string}",
+            "query-input": "required name=search_term_string"
+        },
+        "genre": ["Techno", "House", "Electronic Music"],
+        "inLanguage": "es"
+    }
+    </script>
 </head>
 <body>
     <header>
