Implement advanced lazy-loading with Intersection Observer, content-visibility and preconnect optimization

--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
     <meta property="twitter:description" content="Discover and share underground techno, house and electronic music.">
 
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><circle cx='50' cy='50' r='45' fill='%23000'/><circle cx='50' cy='50' r='40' fill='%23111'/><circle cx='50' cy='50' r='30' fill='%23000'/><circle cx='50' cy='50' r='20' fill='%23222'/><circle cx='50' cy='50' r='8' fill='%23000'/></svg>">
+
+    <!-- Preconnect para optimización de recursos externos -->
+    <link rel="preconnect" href="https://open.spotify.com">
+    <link rel="preconnect" href="https://w.soundcloud.com">
+    <link rel="preconnect" href="https://www.youtube.com">
+    <link rel="dns-prefetch" href="https://open.spotify.com">
+    <link rel="dns-prefetch" href="https://w.soundcloud.com">
+    <link rel="dns-prefetch" href="https://www.youtube.com">
+
     <link rel="stylesheet" href="styles.css">
 
     <!-- Structured Data (JSON-LD) -->
