--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         .loading.active{display:block}
     </style>
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.min.css">
 
     <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
@@ -238,8 +238,8 @@
         window.chatUpdateDoc = updateDoc;
     </script>
 
-    <script src="script.js"></script>
-    <script src="chat.js"></script>
-    <script src="upload.js"></script>
+    <script src="script.min.js"></script>
+    <script src="chat.min.js"></script>
+    <script src="upload.min.js"></script>
 </body>
 </html>
