--- a/profile.html
+++ b/profile.html
@@ -35,6 +35,8 @@
         .empty-state{text-align:center;padding:4rem 2rem;color:#444;font-size:.8rem;letter-spacing:2px}
         .progress-bar{width:100%;height:8px;background:#1a1a1a;margin-top:.5rem;border-radius:4px;overflow:hidden}
         .progress-fill{height:100%;background:linear-gradient(90deg,#666,#999);transition:width .3s}
+        .photo-upload-btn{position:absolute;bottom:0;right:0;width:35px;height:35px;border-radius:50%;background:#1a1a1a;border:2px solid #333;color:#666;cursor:pointer;display:flex;align-items:center;justify-content:center;font-size:1.2rem;transition:all .3s}
+        .photo-upload-btn:hover{background:#333;border-color:#666;color:#999;transform:scale(1.1)}
     </style>
 </head>
 <body>
@@ -43,6 +45,13 @@
 
         <!-- Profile Header -->
         <div class="profile-header">
+            <div style="position:relative;display:inline-block;margin-bottom:1.5rem">
+                <div id="profilePicture" style="width:120px;height:120px;border-radius:50%;border:2px solid #333;overflow:hidden;background:#0a0a0a;display:flex;align-items:center;justify-content:center;font-size:3rem;color:#333;margin:0 auto">
+                    ?
+                </div>
+                <button onclick="document.getElementById('photoUpload').click()" class="photo-upload-btn">📷</button>
+                <input type="file" id="photoUpload" accept="image/jpeg,image/png,image/jpg,image/webp,image/gif" style="display:none">
+            </div>
             <div class="profile-username" id="profileUsername">...</div>
             <div class="profile-joined" id="profileJoined">MEMBER SINCE ...</div>
         </div>
@@ -116,8 +125,9 @@
     <!-- Firebase SDK -->
     <script type="module">
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
-        import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
-        import { getFirestore, doc, getDoc, collection, query, where, orderBy, onSnapshot } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js';
+        import { getAuth, onAuthStateChanged, updateProfile } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
+        import { getFirestore, doc, getDoc, updateDoc, collection, query, where, orderBy, onSnapshot } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js';
+        import { getStorage, ref, uploadBytes, getDownloadURL } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-storage.js';
 
         const firebaseConfig = {
             apiKey: "AIzaSyDa5zahCZE7Gsh0JAkC1iimWutpBddRF1s",
@@ -132,6 +142,9 @@
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
         const db = getFirestore(app);
+        const storage = getStorage(app);
+
+        let currentUser = null;
 
         onAuthStateChanged(auth, async (user) => {
             if (!user) {
@@ -139,13 +152,28 @@
                 return;
             }
 
+            currentUser = user;
+
             // Load user profile
             loadUserProfile(user);
             loadUserTracks(user.uid);
+
+            // Setup photo upload
+            setupPhotoUpload(user);
         });
 
         async function loadUserProfile(user) {
             document.getElementById('profileUsername').textContent = user.displayName || 'Anonymous';
+
+            // Load profile picture
+            if (user.photoURL) {
+                const profilePic = document.getElementById('profilePicture');
+                profilePic.innerHTML = `<img src="${user.photoURL}" style="width:100%;height:100%;object-fit:cover">`;
+            } else {
+                // Default avatar with first letter
+                const firstLetter = (user.displayName || user.email).charAt(0).toUpperCase();
+                document.getElementById('profilePicture').textContent = firstLetter;
+            }
 
             try {
                 const userDoc = await getDoc(doc(db, 'users', user.uid));
@@ -263,6 +291,58 @@
                     `;
                     tracksList.appendChild(trackDiv);
                 });
+            });
+        }
+
+        function setupPhotoUpload(user) {
+            const photoUpload = document.getElementById('photoUpload');
+
+            photoUpload.addEventListener('change', async (e) => {
+                const file = e.target.files[0];
+                if (!file) return;
+
+                // Validate file
+                const maxSize = 5 * 1024 * 1024; // 5MB
+                if (file.size > maxSize) {
+                    alert('Image too large. Max size is 5MB');
+                    return;
+                }
+
+                const validTypes = ['image/jpeg', 'image/png', 'image/jpg', 'image/webp', 'image/gif'];
+                if (!validTypes.includes(file.type)) {
+                    alert('Invalid file type. Use JPG, PNG, WEBP or GIF');
+                    return;
+                }
+
+                try {
+                    // Show loading state
+                    const profilePic = document.getElementById('profilePicture');
+                    profilePic.innerHTML = '<div style="font-size:1rem;color:#666">Uploading...</div>';
+
+                    // Upload to Firebase Storage
+                    const storageRef = ref(storage, `profile-pictures/${user.uid}`);
+                    await uploadBytes(storageRef, file);
+
+                    // Get download URL
+                    const photoURL = await getDownloadURL(storageRef);
+
+                    // Update user profile
+                    await updateProfile(auth.currentUser, { photoURL });
+
+                    // Update Firestore
+                    await updateDoc(doc(db, 'users', user.uid), { photoURL });
+
+                    // Update UI
+                    profilePic.innerHTML = `<img src="${photoURL}" style="width:100%;height:100%;object-fit:cover">`;
+
+                    alert('Profile picture updated!');
+                } catch (error) {
+                    console.error('Error uploading photo:', error);
+                    alert('Error uploading photo. Try again.');
+
+                    // Restore previous state
+                    loadUserProfile(currentUser);
+                }
             });
         }
     </script>
