--- a/profile.html
+++ b/profile.html
@@ -62,6 +62,7 @@
             </div>
             <div class="profile-username" id="profileUsername">...</div>
             <div class="profile-joined" id="profileJoined">MEMBER SINCE ...</div>
+            <div id="userRank" style="font-size:.8rem;color:#888;letter-spacing:4px;margin-top:.8rem;text-transform:uppercase">NEWCOMER</div>
         </div>
 
         <!-- Stats Grid -->
@@ -189,6 +190,7 @@
                     // Update rank
                     const rank = getRank(diggerScore);
                     document.getElementById('rankInfo').textContent = `RANK: ${rank}`;
+                    document.getElementById('userRank').textContent = rank;
 
                     // Update progress bar
                     const progress = (diggerScore % 100) / 100 * 100;
