--- a/profile.html
+++ b/profile.html
@@ -192,15 +192,31 @@
                     document.getElementById('rankInfo').textContent = userData.isAdmin ? 'ADMIN' : `RANK: ${rank}`;
                     document.getElementById('userRank').textContent = rank;
 
-                    // Add special styling for admin
+                    // Add special styling for admin - intense neon glow effect
                     if (userData.isAdmin) {
-                        // Username in red with glow
-                        document.getElementById('profileUsername').style.color = '#ff4444';
-                        document.getElementById('profileUsername').style.textShadow = '0 0 20px rgba(255,68,68,0.6)';
+                        // Username with intense neon red glow (multiple layers)
+                        document.getElementById('profileUsername').style.color = '#ff3366';
+                        document.getElementById('profileUsername').style.textShadow = `
+                            0 0 7px #ff3366,
+                            0 0 10px #ff3366,
+                            0 0 21px #ff3366,
+                            0 0 42px #ff0044,
+                            0 0 82px #ff0044,
+                            0 0 92px #ff0044,
+                            0 0 102px #ff0044,
+                            0 0 151px #ff0044
+                        `;
 
-                        // Rank in red with glow
-                        document.getElementById('userRank').style.color = '#ff4444';
-                        document.getElementById('userRank').style.textShadow = '0 0 10px rgba(255,68,68,0.5)';
+                        // Rank with intense neon glow
+                        document.getElementById('userRank').style.color = '#ff3366';
+                        document.getElementById('userRank').style.textShadow = `
+                            0 0 7px #ff3366,
+                            0 0 10px #ff3366,
+                            0 0 21px #ff3366,
+                            0 0 42px #ff0044,
+                            0 0 82px #ff0044,
+                            0 0 92px #ff0044
+                        `;
                     }
 
                     // Update progress bar
