Update chat to use registered username with neon glow effect

--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
                 <!-- Los mensajes se cargarán aquí -->
             </div>
             <div class="chat-input-container">
+                <div id="chatUsernameDisplay" style="display:none;padding:.6rem;background:#0a0a0a;border:1px solid #1a1a1a;font-size:.65rem;letter-spacing:2px;color:#666;min-width:100px;text-align:center"></div>
                 <input
                     type="text"
                     id="chatUsername"
