Rebrand from 'Fran's Music Cave' to 'The Music Cave' with clickable logo

--- a/auth.html
+++ b/auth.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Fran's Music Cave</title>
+    <title>Login - The Music Cave</title>
     <link rel="stylesheet" href="styles.min.css">
     <style>
         .auth-container{max-width:400px;margin:150px auto;padding:2rem}
