--- a/index.html
+++ b/index.html
@@ -6,24 +6,24 @@
     <meta name="theme-color" content="#000000">
 
     <!-- SEO Meta Tags -->
-    <title>Fran's Music Cave - Underground Techno & House Tracks</title>
+    <title>The Music Cave - Underground Techno & House Tracks</title>
     <meta name="description" content="Discover and share underground techno, house and electronic music. A curated feed of the best tracks from Spotify, YouTube and SoundCloud. Join the community.">
     <meta name="keywords" content="techno, house, underground music, electronic music, DJ sets, techno tracks, house music, music feed, spotify, soundcloud">
-    <meta name="author" content="Fran">
+    <meta name="author" content="The Music Cave">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://narfbach.github.io/fran-music-cave/">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://narfbach.github.io/fran-music-cave/">
-    <meta property="og:title" content="Fran's Music Cave - Underground Techno & House">
+    <meta property="og:title" content="The Music Cave - Underground Techno & House">
     <meta property="og:description" content="Discover and share underground techno, house and electronic music. A curated feed of the best tracks.">
-    <meta property="og:site_name" content="Fran's Music Cave">
+    <meta property="og:site_name" content="The Music Cave">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://narfbach.github.io/fran-music-cave/">
-    <meta property="twitter:title" content="Fran's Music Cave - Underground Techno & House">
+    <meta property="twitter:title" content="The Music Cave - Underground Techno & House">
     <meta property="twitter:description" content="Discover and share underground techno, house and electronic music.">
 
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><circle cx='50' cy='50' r='45' fill='%23000'/><circle cx='50' cy='50' r='40' fill='%23111'/><circle cx='50' cy='50' r='30' fill='%23000'/><circle cx='50' cy='50' r='20' fill='%23222'/><circle cx='50' cy='50' r='8' fill='%23000'/></svg>">
@@ -81,7 +81,7 @@
     {
         "@context": "https://schema.org",
         "@type": "WebSite",
-        "name": "Fran's Music Cave",
+        "name": "The Music Cave",
         "url": "https://narfbach.github.io/fran-music-cave/",
         "description": "Discover and share underground techno, house and electronic music. A curated feed of the best tracks from Spotify, YouTube and SoundCloud.",
         "potentialAction": {
@@ -97,7 +97,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">FRAN MUSIC CAVE</div>
+            <a href="index.html" class="logo" style="text-decoration:none;color:inherit">THE MUSIC CAVE</a>
             <div class="header-right">
                 <div id="userSection" style="display:none;font-size:.7rem;color:#666;letter-spacing:2px;margin-right:1rem;position:relative">
                     <button id="userMenuBtn" style="background:transparent;border:none;color:#666;font-family:'Courier New',monospace;font-size:.7rem;cursor:pointer;letter-spacing:2px;display:flex;align-items:center;gap:.5rem">
