--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Panel - Fran's Music Cave</title>
+    <title>Admin Panel - The Music Cave</title>
     <link rel="stylesheet" href="styles.min.css">
     <style>
         .admin-container{max-width:900px;margin:100px auto;padding:2rem}
