Fix navigation links to use relative paths instead of index.html

--- a/auth.html
+++ b/auth.html
@@ -76,7 +76,7 @@
         </div>
 
         <div class="back-link">
-            <a href="index.html">← BACK TO CAVE</a>
+            <a href="./">← BACK TO CAVE</a>
         </div>
     </div>
 
