--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <body>
     <header>
         <nav>
-            <a href="index.html" class="logo" style="text-decoration:none;color:inherit">THE MUSIC CAVE</a>
+            <a href="./" class="logo" style="text-decoration:none;color:inherit">THE MUSIC CAVE</a>
             <div class="header-right">
                 <div id="userSection" style="display:none;font-size:.7rem;color:#666;letter-spacing:2px;margin-right:1rem;position:relative">
                     <button id="userMenuBtn" style="background:transparent;border:none;color:#666;font-family:'Courier New',monospace;font-size:.7rem;cursor:pointer;letter-spacing:2px;display:flex;align-items:center;gap:.5rem">
