--- a/profile.html
+++ b/profile.html
@@ -41,7 +41,7 @@
 </head>
 <body>
     <div class="profile-container">
-        <a href="index.html" class="back-btn">← BACK TO CAVE</a>
+        <a href="./" class="back-btn">← BACK TO CAVE</a>
 
         <!-- Profile Header -->
         <div class="profile-header">
